--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
+    "hex2rgba": "0.0.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
     "react": "^16.12.0",
