--- a/package.json
+++ b/package.json
@@ -24,11 +24,16 @@
     "gatsby-plugin-mdx": "^1.2.41",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-remark-images": "^3.3.31",
+    "gatsby-remark-prismjs": "^3.5.14",
     "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-transformer-remark": "^2.8.36",
     "gatsby-transformer-sharp": "^2.5.15",
+    "gatsby-transformer-yaml": "^2.4.13",
     "hex2rgba": "0.0.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
+    "prismjs": "^1.21.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.11.0",
