feat: build sidebar structure

--- a/src/data/links.yaml
+++ b/src/data/links.yaml
@@ -7,9 +7,9 @@
         - title: NNDL book
           items:
             - title: 2-机器学习概述
-              link: /MLAndDL/NNDLBook/2-机器学习概述
+              link: /MLAndDL/NNDLBook/2-机器学习概述/
             - title: 3-线性模型
-              link: /MLAndDL/NNDLBook/3-线性模型
+              link: /MLAndDL/NNDLBook/3-线性模型/
     - title: HTML/CSS/JS
       items:
         - title: JS
@@ -17,4 +17,4 @@
             - title: algorithms
               items:
               - title: 节流防抖
-                link: /HtmlCssJs/JS/algorithms/debounceThrottle
+                link: /HtmlCssJs/JS/algorithms/debounceThrottle/
