--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "@loadable/component": "^5.13.2",
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
     "bluebird": "^3.7.2",
@@ -33,6 +34,7 @@
     "hex2rgba": "0.0.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
+    "prism-react-renderer": "^1.1.1",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
