--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
     "@loadable/component": "^5.13.2",
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
+    "@styled-icons/fa-solid": "^10.22.0",
+    "algoliasearch": "^4.5.1",
     "bluebird": "^3.7.2",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.24.61",
+    "gatsby-plugin-algolia": "^0.12.1",
     "gatsby-plugin-emotion": "^4.3.11",
     "gatsby-plugin-mdx": "^1.2.41",
     "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-remark-images": "^3.3.31",
     "gatsby-remark-prismjs": "^3.5.14",
@@ -39,6 +44,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.11.0",
+    "react-instantsearch-dom": "^6.7.0",
+    "styled-components": "^5.2.0",
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
