--- a/package.json
+++ b/package.json
@@ -19,32 +19,45 @@
     "@loadable/component": "^5.13.2",
     "@mdx-js/mdx": "^1.6.18",
     "@mdx-js/react": "^1.6.18",
+    "@reach/router": "^1.3.4",
     "@styled-icons/fa-solid": "^10.22.0",
     "algoliasearch": "^4.5.1",
     "bluebird": "^3.7.2",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.61",
     "gatsby-plugin-algolia": "^0.12.1",
+    "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-emotion": "^4.3.11",
+    "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-mdx": "^1.2.41",
+    "gatsby-plugin-nprogress": "^2.3.12",
+    "gatsby-plugin-offline": "^3.2.30",
+    "gatsby-plugin-react-helmet": "^3.3.12",
+    "gatsby-plugin-robots-txt": "^1.5.3",
     "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-sitemap": "^2.4.14",
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-remark-images": "^3.3.31",
+    "gatsby-remark-katex": "^3.3.13",
     "gatsby-remark-prismjs": "^3.5.14",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-remark": "^2.8.36",
     "gatsby-transformer-sharp": "^2.5.15",
     "gatsby-transformer-yaml": "^2.4.13",
     "hex2rgba": "0.0.1",
+    "katex": "^0.12.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
     "prism-react-renderer": "^1.1.1",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-instantsearch-dom": "^6.7.0",
+    "rehype-katex": "^4.0.0",
+    "remark-math": "^3.0.1",
     "styled-components": "^5.2.0",
     "theme-ui": "^0.3.1"
   },
