perf: header, sidebar

--- a/src/data/links.yaml
+++ b/src/data/links.yaml
@@ -2,6 +2,8 @@
   key: docs
   disableAccordions: false
   items:
+    - title: BLOG LIST
+      link: /blog/
     - title: ML and DL
       items:
         - title: NNDL book
