--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "moment": "^2.29.0",
     "prism-react-renderer": "^1.1.1",
     "prismjs": "^1.21.0",
+    "rc-tooltip": "^4.2.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
