--- a/src/data/commits.yaml
+++ b/src/data/commits.yaml
@@ -1,21 +1,46 @@
+- date: 2020-09-29
+  message: "init: 初始化博客"
+- date: 2020-09-29
+  message: "feat: 添加 theme-bshz 博客主题"
+- date: 2020-09-29
+  message: "feat: 新建 sidebar"
+- date: 2020-09-30
+  message: "feat: 搭建 sidebar 结构"
+- date: 2020-09-30
+  message: "feat: 添加响应式，完善 sidebar"
+- date: 2020-10-01
+  message: "perf: 优化 sidebar"
+- date: 2020-10-02
+  message: "perf: 响应式 sidebar"
+- date: 2020-10-02
+  message: "feat: 添加 codeblock"
+- date: 2020-10-02
+  message: "feat: 添加 algolia search"
+- date: 2020-10-03
+  message: "perf: 优化 algolia search"
+- date: 2020-10-03
+  message: "feat: 添加 blog list"
+- date: 2020-10-03
+  message: "feat: 添加 home"
+- date: 2020-10-04
+  message: "perf: 优化 home (home item list)"
+- date: 2020-10-05
+  message: "feat: 添加 disqus, seo"
+- date: 2020-10-05
+  message: "perf: 优化 header, sidebar"
+- date: 2020-10-05
+  message: "feat: 添加 gh-pages"
+- date: 2020-10-06
+  message: "release: v1.0.0"
+- date: 2020-10-10
+  message: "fix: 修复 disqus"
+- date: 2020-10-13
+  message: "feat: 新建 blog calendar"
 - date: 2020-10-14
-  message: 功能：增加了 blog calendar
-  version: 1.0.1
-- date: "2020-10-14"
-  message: 优化：优化了 blog calendar
-  version: 1.0.1
-- date: "2020-10-14"
-  message: 优化：优化了 blog calendar
-  version: 1.0.1
-- date: "2020-10-14"
-  message: 优化：优化了 blog calendar
-  version: 1.0.1
-- date: "2020-10-14"
-  message: 优化：优化了 blog calendar
-  version: 1.0.1
-- date: "2020-10-14"
-  message: 优化：优化了 blog calendar
-  version: 1.0.1
-- date: "2020-10-13"
-  message: bug：修复了 blog calendar
-  version: 1.0.0
+  message: "feat: 完善 blog calendar"
+- date: 2020-10-14
+  message: "feat: 添加 blog calendar tooltip"
+- date: 2020-10-15
+  message: "feat: 完善 blog calendar tooltip"
+- date: 2020-10-15
+  message: "feat: 完成 blog calendar"
