--- a/src/data/links.yaml
+++ b/src/data/links.yaml
@@ -19,4 +19,4 @@
             - title: algorithms
               items:
               - title: 节流防抖
-                link: /HtmlCssJs/JS/algorithms/debounceThrottle/
+                link: /HtmlCssJs/JS/algorithms/节流防抖/
