--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "gatsby-blog",
+  "name": "bshz",
   "private": false,
   "description": "There are things about Machine Learning, Deep Learning, Front-End and anything I am interested in.",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
