--- a/src/data/commits.yaml
+++ b/src/data/commits.yaml
@@ -64,3 +64,5 @@
   message: "perf: 优化 right sidebar; 去掉 index 页面"
 - date: 2020-10-21
   message: "release: v1.2.0"
+- date: 2020-10-21
+  message: "perf: footer"
