--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bshz",
   "private": false,
   "description": "There are things about Machine Learning, Deep Learning, Front-End and anything I am interested in.",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
@@ -29,9 +29,9 @@
     "gatsby-plugin-algolia": "^0.12.1",
     "gatsby-plugin-disqus": "^1.2.2",
     "gatsby-plugin-emotion": "^4.3.11",
+    "gatsby-plugin-google-analytics": "^2.4.0",
     "gatsby-plugin-manifest": "^2.4.33",
     "gatsby-plugin-mdx": "^1.2.41",
-    "gatsby-plugin-nprogress": "^2.3.12",
     "gatsby-plugin-offline": "^3.2.30",
     "gatsby-plugin-react-helmet": "^3.3.12",
     "gatsby-plugin-robots-txt": "^1.5.3",
@@ -39,6 +39,7 @@
     "gatsby-plugin-sitemap": "^2.4.14",
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.3.31",
     "gatsby-remark-katex": "^3.3.13",
     "gatsby-remark-prismjs": "^3.5.14",
@@ -50,6 +51,7 @@
     "katex": "^0.12.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
+    "nprogress": "^0.2.0",
     "prism-react-renderer": "^1.1.1",
     "prismjs": "^1.21.0",
     "react": "^16.12.0",
